--- a/ui/styles.css
+++ b/ui/styles.css
@@ -149,3 +149,8 @@ body {
     background-color: #f5f7f9;
     font-weight: 600;
 }
+
+.simple-table th.num,
+.simple-table td.num {
+  text-align: center;
+}
